feat: add random and grouped book searches
